[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "TingTing"
authors = [
    {name = "TingTing", email = "info@tingting.io"},
]
description = "AI That Speaks Nepali, Build for Outbound."
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.rst"
dynamic = ["version"]
